# yenshia

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
circuits/yenshia_location/: INPUTS.md  Nargo.toml
circuits/yenshia_location/src/: main.nr
contracts/: README.md
contracts/yenshia_ultrahonk_verifier/: Cargo.toml
contracts/yenshia_ultrahonk_verifier/src/: lib.rs
deployments/: testnet.json  vercel.json
docs/: PRD.md
scripts/zk/: compile-noir.sh  deploy-ultrahonk.sh  invoke-ultrahonk.sh  prove-noir.sh
